--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "file-type": "^19.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
