--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "nodemon app.js"
