--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^3.2.5",
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "file-type": "^19.0.0",
@@ -15,6 +16,9 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
+    "nodemailer-brevo-transport": "^2.1.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "validator": "^13.11.0",
     "yup": "^1.3.3"
   },
