--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.1.5",
     "file-type": "^19.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
