--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,13 @@
     "async": "^3.2.5",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
+    "crypto-random-string": "^5.0.0",
+    "csurf": "^1.11.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
     "file-type": "^19.0.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
@@ -20,6 +23,7 @@
     "nodemailer": "^6.9.8",
     "nodemailer-brevo-transport": "^2.1.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "yup": "^1.3.3"
   },
