--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "file-type": "^19.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
